fix: YPlayer white-space no wrap

--- a/react/src/components/YPlayer.css
+++ b/react/src/components/YPlayer.css
@@ -11,7 +11,7 @@
 .miniTimeDetail {
   font-size: 12px;
   color: #777;
-  whitespace-wrap: nowrap;
+  white-space: nowrap;
 }
 
 .timeDetail {
